// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should print help message on shortcut: help data is incorrect 1`] = `
"Usage: contentful <cmd> [args]

Commands:
  boilerplate   Download a boilerplate
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  guide         A guide introducing basic concepts of working with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  organization  Manage and list your organizations
  space         Manage and list your spaces

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2019 Contentful"
`;

exports[`should print help message on wrong subcommand: help data is incorrect 1`] = `
"Usage: contentful <cmd> [args]

Commands:
  boilerplate   Download a boilerplate
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  guide         A guide introducing basic concepts of working with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  organization  Manage and list your organizations
  space         Manage and list your spaces

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2019 Contentful
Please specify a command."
`;

exports[`should print help message: help data is incorrect 1`] = `
"Usage: contentful <cmd> [args]

Commands:
  boilerplate   Download a boilerplate
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  guide         A guide introducing basic concepts of working with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  organization  Manage and list your organizations
  space         Manage and list your spaces

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2019 Contentful"
`;

exports[`should return code 1 when errors exist no args: help data is incorrect 1`] = `
"Usage: contentful <cmd> [args]

Commands:
  boilerplate   Download a boilerplate
  config        Manage and list your configs
  content-type  Manage and list your space content types           [aliases: ct]
  extension     Manage and list your extensions
  guide         A guide introducing basic concepts of working with Contentful
  login         Login to Contentful
  logout        Logout from Contentful
  organization  Manage and list your organizations
  space         Manage and list your spaces

Options:
  -h, --help     Show help                                             [boolean]
  -v, --version  Show current version                                  [boolean]

Copyright 2019 Contentful
Please specify a command."
`;
